--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,231 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins" sans-serif;
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    scroll-padding-top: 3rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+:root{
+    --main-color:#ff9f0d;
+    --text-color:#fff;
+    --other-color:#212121;
+    --second-color:#9e9e9e;
+    --bg-color:#111;
+
+    --big-font: 3.5rem;
+    --h2-font: 2.6rem;
+    --p-font:1.1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+    background: var(--bg-color);
+    color: var(--text-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header{
+   position: fixed; 
+   width: 100%;
+   top: 0;
+   right: 0;
+   z-index: 100;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   background: transparent;
+   padding: 30px 14%;
+   transition: all 0.5 ease;
 }
 
-.card {
-  padding: 2em;
+.logo{
+    display: flex;
+    align-items: center;
+    color:var(--main-color);
+    width: 100px;
+    font-size: 50px;
+    font-weight: 700;
+    vertical-align: middle;
 }
 
-.read-the-docs {
-  color: #888;
+h2{
+    color: var(--main-color);
+}
+
+.navlist{
+    display: flex;
+}
+
+.navlist a {
+    display: flex;
+    color: var(--text-color);
+    font-weight: 600;
+    font-size: var(--p-font);
+    margin: 0 30px;
+    transition: all 0.5s ease;
+}
+
+.navlist a:hover{
+    color: var(--main-color);
+    transform: scale(1.2);
+}
+
+.navlist a.active{
+    color: var(--main-color);
+}
+
+.nav-icons{
+  display: flex;
+  align-items: center;
+  padding: 8px 15px;
+  background: var(--main-color);
+  border-radius:50%;
+  box-shadow: #ff9f0d 0px 1px 25px;
+  display: none;
+}
+
+.nav-icons i{
+    vertical-align: middle;
+    font-size: 20px;
+    color: var(--text-color);
+    margin-right: 8px;
+    margin-left: 5px;
+    cursor: pointer;
+    z-index: 100001;
+    display: none;
+}
+
+section{
+    padding: 100px 14% 60px;
+    margin-top: 70px;
+}
+
+.home{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
+}
+
+.home-img img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 10rem;
+}
+
+.home-text h1{
+    font-size: var(--big-font);
+    font-weight: 500;
+    line-height: 1.3;
+    margin-bottom: 1rem;
+}
+
+.home-text h2{
+    font-size: var(--big-font);
+    font-weight: 500;
+    line-height: 1.3;
+    margin-bottom: 1rem;
+}
+
+.home-text h3{
+    font-size: var(--big-font);
+    color: var(--text-color);
+    font-weight: 500;
+    line-height: 1.3;
+    margin-bottom: 8rem;
+}
+
+
+
+span{
+    font-size: 25px;
+    color: var(--main-color);
+}
+
+.btn{
+    display: inline-block;
+    padding: 15px 35px;
+    background: var(--other-color);
+    color: var(--main-color);
+    font-size: var(--p-font);
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 2rem;
+    transition: 0.5s ease;
+}
+
+.btn i{
+    vertical-align: middle;
+    margin-left: 9px;
+    font-size: 20px;
+}
+
+.btn:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+    box-shadow: #ff9f0d 0px 1px 25px;
+}
+
+.btn2{
+    display: inline-block;
+    margin-left: 30px;
+    font-size: var(--p-font);
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-bottom: 3px solid var(--main-color);
+    color: var(--main-color);
+    transition: 0.5 all ease;
+}
+
+.btn2:hover{
+    transform: scale(1.1) translateX(12px);
+}
+
+header.sticky{
+    padding: 12px 14%;
+    background:var(--other-color);
+}
+
+.container{
+    padding: 30px 14% 70px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+    text-align: center;
+}
+
+.container-box{
+    padding: 43px;
+    background: var(--other-color);
+    border-radius: 3rem;
+}
+
+.container-box img{
+    width: 100%;
+    max-width: 50px;
+    height: auto;
+}
+
+.container-box h3{
+    font-size: 21px;
+    font-weight: bold;
+    margin: 16px 0;
+}
+
+.container-box a{
+    color: var(--second-color);
+    font-size: var(--p-font);
+    letter-spacing: 1px;
+    transition: all 0.5s ease;
+}
+
+.container-box a:hover{
+    color: var(--main-color);
 }
