--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
     --second-color:#9e9e9e;
     --bg-color:#111;
 
-    --big-font: 3.8rem;
-    --h2-font: 2.6rem;
+    --big-font: 3.5rem;
+    --h2-font: 2.3rem;
     --p-font:1.1rem;
 }
 
@@ -38,7 +38,7 @@ header{
    align-items: center;
    justify-content: space-between;
    background: transparent;
-   padding: 15px 10%;
+   padding: 10px 10%;
    transition: all 0.5 ease;
 }
 
@@ -99,22 +99,21 @@ h2{
     display: none;
 }
 
-
-
 .home{
     position: relative;
+    margin-top: 5px;
     padding: 100px;
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-columns:repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit,minmax(250px, auto));
     align-items: center;
     gap: 2rem;
 }
 
 .home-img img{
     align-items: center;
-    width: 500px;
+    width: 400px;
     height: auto;
     margin-bottom: 10rem;
 }
@@ -151,6 +150,7 @@ span{
 
 .btn{
     display: inline-block;
+    margin-left: 90px;
     padding: 15px 35px;
     background: var(--other-color);
     color: var(--main-color);
@@ -175,7 +175,7 @@ span{
 
 .btn2{
     display: inline-block;
-    margin-left: 30px;
+    margin-left: 100px;
     font-size: var(--p-font);
     font-weight: 500;
     letter-spacing: 1px;
@@ -194,10 +194,11 @@ header.sticky{
 }
 
 .container{
-    padding: 50px 8% 70px;
+    padding: 30px 8% 70px;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(300px, auto));
-    gap: 2rem;
+    gap: 1rem;
+    margin-left:30px;
     text-align: center;
     justify-content: space-between;
     margin-top: 50px;
@@ -214,9 +215,9 @@ header.sticky{
 
 .container-box img{
     width: 100%;
-    max-width: 80px;
+    max-width: 100px;
     height: auto;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 .container-box h3{
@@ -237,10 +238,9 @@ header.sticky{
 }
 
 .about{
-    display: flex;
-    padding: 70px 0px 70px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 6rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px, auto));
+    gap: 10rem;
 }
 
 .about-img{
@@ -249,8 +249,8 @@ header.sticky{
 }
 
 .about-img img{
-    width: 450px;
-    margin-left: 60px;
+    width: 300px;
+    margin-left: 80px;
     vertical-align: middle;
 }
 
@@ -263,8 +263,288 @@ header.sticky{
 
 .about-text p{
     color: var(--second-color);
-    margin-right: 70px;
+    margin: 10px;
     font-size: var(--p-font);
     line-height: 1.5;
     margin-bottom: 3rem;
+}
+
+.shop{
+    margin-top: 0px;
+}
+
+.middle-text{
+    text-align: center;
+}
+
+.middle-text h4{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    color: var(--main-color);
+}
+
+.middle-text h2{
+    font-size: var(--h2-font);
+    color: var(--text-color);
+}
+
+.shop-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+    gap: 1rem;
+    align-items: center;
+    margin: 15px;
+    margin-top: 4rem;
+}
+
+.row img{
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+
+}
+
+.row{
+    position: relative;
+    padding: 10px 10px 15px;
+    margin: 20px;
+    background: var(--other-color);
+    border-radius: 3rem;
+}
+
+.row h3{
+    font-size: 18px;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+.row p{
+    color: var(--second-color);
+    font-size: var(--p-font);
+    line-height: 30px;
+    margin-bottom: 1.1rem;
+}
+
+.int-text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.int-text .Price h6{
+    font-size: 17px;
+    color: var(--main-color);
+    font-weight: 600;
+}
+
+.int-text .s-btn a{
+    display: inline-block;
+    padding: 9px 23px;
+    background: var(--bg-color);
+    color: var(--main-color);
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 3rem;
+    transition: all 0.5s ease;
+}
+
+.int-text .s-btn a:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+    box-shadow: #ff9f0d 0px 1px 25px;
+}
+
+.top-icon{
+    position: absolute;
+    top: 5px;
+    left: 15px;
+}
+
+.top-icon img{
+    width: 50px;
+}
+
+.row-btn{
+    text-align: center;
+    margin-right: 80px;
+    margin-bottom: 6rem;
+}
+
+.row img:hover{
+    transform: scale(1.1);
+}
+
+.shop-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,auto));
+    gap: 3rem;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.row img{
+    width: 200px;
+    margin-left: 50px;
+    height: auto;
+    margin-top: 10px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+
+}
+
+.row{
+    position: relative;
+    padding: 10px 35px 40px;
+    background: var(--other-color);
+    border-radius: 3rem;
+}
+
+.row h3{
+    font-size: 18px;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+
+.row p{
+    color: var(--second-color);
+    font-size: var(--p-font);
+    line-height: 30px;
+    margin-bottom: 1.1rem;
+}
+
+.int-text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.int-text .Price h6{
+    font-size: 17px;
+    color: var(--main-color);
+    font-weight: 600;
+}
+
+.int-text .s-btn a{
+    display: inline-block;
+    padding: 9px 23px;
+    background: var(--bg-color);
+    color: var(--main-color);
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 3rem;
+    transition: all 0.5s ease;
+}
+
+.int-text .s-btn a:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+    box-shadow: #ff9f0d 0px 1px 25px;
+}
+
+.top-icon{
+    position: absolute;
+    top: 5px;
+    left: 15px;
+}
+
+.top-icon img{
+    width: 50px;
+}
+
+.row-btn{
+    text-align: center;
+    margin-top: 4rem;
+}
+
+.row img:hover{
+    transform: scale(1.1);
+}
+
+.review{
+    margin-top: 0px;
+}
+
+.review-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,auto));
+    gap: 3rem;
+    align-items: center;
+    margin-top: 3rem;
+    margin-bottom: 20px;
+}
+
+.box{
+    padding: 30px;
+    margin: 30px;
+    background: var(--other-color);
+    border-radius: 3rem;
+    margin-top: -2rem;
+}
+
+.box p{
+    color: var(--second-color);
+    font-size: var(--p-font);
+    line-height: 30px;
+    margin-bottom: 1.5rem;
+}
+
+.in-box{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.bx-img img{
+    width: 80px;
+    height: auto;
+}
+
+.bxx-text h4{
+    margin: 5px 0;
+    font-size: 18px;
+}
+
+.bxx-text h5{
+    color: var(--second-color);
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.rating i{
+    color: var(--main-color);
+    font-size: 18px;
+    margin-right: 5px;
+}
+
+@media(max-width:991px){
+    .home-text{
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .home-text h1 h2 h3{
+        margin-top: -1px;
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .home-img{
+        width: 100%;
+        text-align: center;
+    }
+
+    .home-img img{
+       display: flex;
+       width: 300px;
+    }
+
+
 }
