--- a/src/components/Nabar.css
+++ b/src/components/Nabar.css
@@ -11,7 +11,6 @@
 }
 
 .Navbar{
-    width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -19,12 +18,12 @@
     background:var(--other-color);
 }
 
-.Navbar > .nav-logo{
+/*.Navbar > .nav-logo{
     font-weight: 500;
     font-size: 25px;
     margin:15px;
     color:var(--main-color);
-}
+}*/
 
 .Navbar > .nav-items > a{
     color: #fff;
@@ -58,7 +57,10 @@
     display: none;
 }
 
-@media(max-width:700px){
+@media(max-width:991px){
+    .Navbar{
+        margin: auto;
+    }
     .Navbar .nav-items{
         position: absolute;
         top: 80px;
@@ -81,7 +83,7 @@
 
     .Navbar .nav-toggle{
         display: flex;
-        width: 50px;
+        width: 40px;
         height: 50px;
         align-items: center;
         justify-content: center;
